<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip"
	android:background="@drawable/stopwatch10">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:format="@string/chronometer_initial_format"
        android:gravity="center"
        android:paddingBottom="40dip"
        android:paddingTop="20dip" />

    <Button
        android:id="@+id/start"
        android:layout_width="75sp"
		android:layout_height="75sp"
		
		android:background="@drawable/round_button"
		android:gravity="center_vertical|center_horizontal"
		android:text="@string/Start"
		android:textColor="#fff" />

     <Button
        android:id="@+id/stop"
        android:layout_width="75sp"
		android:layout_height="75sp"
		android:layout_marginTop="10sp"
		android:background="@drawable/round_button"
		android:gravity="center_vertical|center_horizontal"
		android:text="@string/Stop"
		android:textColor="#fff" />

     <Button
         android:id="@+id/reset"
         android:layout_width="75sp"
         android:layout_height="75sp"
         android:layout_marginTop="10sp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/Reset"
         android:textColor="#fff" />
   	 
     <LinearLayout
	    android:id="@+id/tabs"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="bottom" 
		    android:orientation="horizontal" >
		
		    <ImageButton
            android:id="@+id/Alarm_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Alarm_tab"
            android:src="@drawable/ic_action_add_alarm" />
		    
			
			
		    <ImageButton
            android:id="@+id/Timer_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Timer_tab"
            android:src="@drawable/ic_action_counter" />
		    
		    
		    <ImageButton
            android:id="@+id/Counter_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Counter_tab"
            android:src="@drawable/ic_action_timer" />
		    
		   
		    
		    <ImageButton
            android:id="@+id/Setting_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Setting_tab"
            android:src="@drawable/ic_action_settings" />
		
		</LinearLayout>
 </LinearLayout>