<?xml version="1.0" encoding="utf-8"?>
	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">


         
         <LinearLayout
	        android:id="@+id/toolbar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        
	        android:orientation="horizontal">

             <TextView
                 android:id="@+id/textView_title_bar"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="2"
                 android:background="@color/darkorange"
                 android:gravity="center_vertical"
                 android:paddingLeft="5dp"
                 android:text="@string/app_name"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@android:color/primary_text_dark"
                 android:typeface="monospace" />
	
	        <ImageButton
            android:id="@+id/button_new"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/darkorange"
            android:contentDescription="@string/button_new"
            android:src="@drawable/ic_action_new" />

    </LinearLayout>


     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:drawSelectorOnTop="false"
         android:background="@drawable/alarm" />

     <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/no_alarms"
        android:textColor="#FFFAFA"
        android:background="@drawable/alarm" />
	
	
	<LinearLayout
	    android:id="@+id/tabs"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"   
		    android:orientation="horizontal" >
		
		    <ImageButton
            android:id="@+id/Alarm_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Alarm_tab"
            android:src="@drawable/ic_action_add_alarm" />
		    
			
			
		    <ImageButton
            android:id="@+id/Timer_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Timer_tab"
            android:src="@drawable/ic_action_timer" />
		    
		   
		    
		    <ImageButton
            android:id="@+id/Counter_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Counter_tab"
            android:src="@drawable/ic_action_counter" />
		    
		   
		    <ImageButton
            android:id="@+id/Setting_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Setting_tab"
            android:src="@drawable/ic_action_settings" />
		
		
		</LinearLayout>
 </LinearLayout>