<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm_alert_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ShakalarmActivity" >

    <TextView
        android:id="@+id/acceleration_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/acceleration_x"
        android:textColor="#FFFFF0"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/acceleration_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/acceleration_y"
        android:textColor="#FFFFF0"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/acceleration_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/acceleration_z"
        android:textColor="#FFFFF0"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/shakeCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/shakeCount"
        android:textColor="#FFFFF0"
        android:textSize="70sp"
        android:typeface="monospace" />

</RelativeLayout>