<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/timer" >

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/timer1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hoursLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/titleLabel"
        android:layout_marginTop="80dp"
        android:text="@string/timer2"
        android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/minutesLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hoursLabel"
        android:layout_alignBottom="@+id/hoursLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/timer3"
        android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/secondsLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/minutesLabel"
        android:layout_alignBottom="@+id/minutesLabel"
        android:layout_alignRight="@+id/titleLabel"
        android:text="@string/timer4"
        android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/hoursBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hoursLabel"
        android:layout_alignRight="@+id/hoursLabel"
        android:layout_below="@+id/hoursLabel"
        android:layout_marginTop="40dp"
        android:inputType="number" />
    
     <EditText
         android:id="@+id/minutesBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/minutesLabel"
         android:layout_alignRight="@+id/minutesLabel"
         android:layout_below="@+id/minutesLabel"
         android:layout_marginTop="40dp" 
         android:inputType="number" />
     
      <EditText
          android:id="@+id/secondsBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/secondsLabel"
          android:layout_alignRight="@+id/secondsLabel"
          android:layout_below="@+id/secondsLabel"
          android:layout_marginTop="40dp" 
          android:inputType="number" />

      <Button
          android:id="@+id/startButton"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_below="@+id/minutesBox"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="70dp"
          android:background="@drawable/timer_start"
          />
      <LinearLayout
	    android:id="@+id/tabs"
		    android:layout_width="match_parent"
		    android:layout_height="fill_parent"
		    android:gravity="bottom" 
		    android:orientation="horizontal" >
		
		    <ImageButton
            android:id="@+id/Alarm_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Alarm_tab"
            android:src="@drawable/ic_action_add_alarm" />
		    
			
			
		    <ImageButton
            android:id="@+id/Timer_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Timer_tab"
            android:src="@drawable/ic_action_counter" />
		    
		    
		    <ImageButton
            android:id="@+id/Counter_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Counter_tab"
            android:src="@drawable/ic_action_timer" />
		    
		   
		    
		    <ImageButton
            android:id="@+id/Setting_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/Setting_tab"
            android:src="@drawable/ic_action_settings" />
		
		</LinearLayout>

</RelativeLayout>